--- a/app/index.html
+++ b/app/index.html
@@ -400,10 +400,10 @@
           <div class="col-12">
             <div class="publication-slider w-100">
               <div class="slide">
-                <div class="publication-box">
-                  <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img
+                <a href="publication.html" class="publication-box">
+                  <span class="publication-box__max"><img
                       src="img/public1.jpeg"
-                      alt=""></a>
+                      alt=""></span>
                   <div class="row">
                     <div class="col-4">
                       <div class="publication-box__min" data-img-path="img/public2.jpeg"><img src="img/public2.jpeg"
@@ -421,13 +421,13 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="slide">
-                <div class="publication-box">
-                  <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img
+                <a href="publication.html" class="publication-box">
+                  <span class="publication-box__max"><img
                       src="img/public5.jpeg"
-                      alt=""></a>
+                      alt=""></span>
                   <div class="row">
                     <div class="col-4">
                       <div class="publication-box__min" data-img-path="img/public6.jpeg"><img src="img/public6.jpeg"
@@ -445,13 +445,13 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="slide">
-                <div class="publication-box">
-                  <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img
+                <a href="publication.html" class="publication-box">
+                  <span class="publication-box__max"><img
                       src="img/public9.jpeg"
-                      alt=""></a>
+                      alt=""></span>
                   <div class="row">
                     <div class="col-4">
                       <div class="publication-box__min" data-img-path="img/public10.jpeg"><img src="img/public10.jpeg"
@@ -468,13 +468,13 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="slide">
-                <div class="publication-box">
-                  <a href="img/public13.jpeg" data-fancybox="image4" class="publication-box__max"><img
+                <a href="publication.html" class="publication-box">
+                  <span class="publication-box__max"><img
                       src="img/public12.jpeg"
-                      alt=""></a>
+                      alt=""></span>
                   <div class="row">
                     <div class="col-4">
                       <div class="publication-box__min" data-img-path="img/public13.jpeg"><img src="img/public13.jpeg"
@@ -492,13 +492,13 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="slide">
-                <div class="publication-box">
-                  <a href="img/public1.jpeg" data-fancybox="image" class="publication-box__max"><img
+                <a href="publication.html" class="publication-box">
+                  <span class="publication-box__max"><img
                       src="img/public1.jpeg"
-                      alt=""></a>
+                      alt=""></span>
                   <div class="row">
                     <div class="col-4">
                       <div class="publication-box__min" data-img-path="img/public2.jpeg"><img src="img/public2.jpeg"
@@ -516,7 +516,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
           </div>
@@ -534,37 +534,36 @@
           <div class="col-12">
             <div class="providers-slider w-100">
               <div class="slide">
-                <div class="providers-box">
-                  <div class="providers-box__img"><img src="img/provider1.jpg" alt=""></div>
-                  <h3>Autoservice In Arnsberg</h3>
-                </div>
+                <a href="#" class="providers-box">
+                  <span class="providers-box__img"><img src="img/provider1.jpg" alt=""></span>
+                  <span class="providers-box__title">Autoservice In Arnsberg</span>
+                </a>
               </div>
               <div class="slide">
-                <div class="providers-box">
-                  <div class="providers-box__img"><img src="img/provider2.jpg" alt=""></div>
-                  <h3>Winterdienst In Münster
-                  </h3>
-                </div>
+                <a href="#" class="providers-box">
+                  <span class="providers-box__img"><img src="img/provider2.jpg" alt=""></span>
+                  <span class="providers-box__title">Winterdienst In Münster
+                  </span>
+                </a>
               </div>
               <div class="slide">
-                <div class="providers-box">
-                  <div class="providers-box__img"><img src="img/provider3.jpg" alt=""></div>
-                  <h3>Kochkurs In München</h3>
-                </div>
+                <a href="#" class="providers-box">
+                  <span class="providers-box__img"><img src="img/provider3.jpg" alt=""></span>
+                  <span class="providers-box__title">Kochkurs In München</span>
+                </a>
               </div>
               <div class="slide">
-                <div class="providers-box">
-                  <div class="providers-box__img"><img src="img/provider4.jpg" alt=""></div>
-                  <h3>Karate Kurs In Berlin</h3>
-                </div>
+                <a href="#" class="providers-box">
+                  <span class="providers-box__img"><img src="img/provider4.jpg" alt=""></span>
+                  <span class="providers-box__title">Karate Kurs In Berlin</span>
+                </a>
               </div>
               <div class="slide">
-                <div class="providers-box">
-                  <div class="providers-box__img"><img src="img/provider1.jpg" alt=""></div>
-                  <h3>Autoservice In Arnsberg</h3>
-                </div>
+                <a href="#" class="providers-box">
+                  <span class="providers-box__img"><img src="img/provider1.jpg" alt=""></span>
+                  <span class="providers-box__title">Autoservice In Arnsberg</span>
+                </a>
               </div>
-
             </div>
           </div>
         </div>
