--- a/app/price.html
+++ b/app/price.html
@@ -155,7 +155,7 @@
                   <td>
                     <div class="name-tariffs">Kompakt</div>
                     <div class="price-tariffs">
-                      <div class="currency">$</div> 0
+                      <div class="currency">€</div> 0
                     </div>
                     <div class="footer-tariffs">
                       <p>lorem</p>
@@ -164,7 +164,7 @@
                   <td>
                     <div class="name-tariffs">Basis</div>
                     <div class="price-tariffs">
-                      <div class="currency">$</div> 59
+                      <div class="currency">€</div> 59
                     </div>
                     <div class="footer-tariffs">
                       <a href="#" class="btn btn-accent">Auswählen</a>
@@ -173,7 +173,7 @@
                   <td>
                     <div class="name-tariffs">Profi</div>
                     <div class="price-tariffs">
-                      <div class="currency">$</div> 129
+                      <div class="currency">€</div> 129
                     </div>
                     <div class="footer-tariffs">
                       <a href="#" class="btn btn-accent">Auswählen</a>
@@ -203,49 +203,93 @@
                     <td>
                       <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
                     </td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Publikationen Veröffentlichung</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Bewertungen sammeln</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Modernes Betriebsprofil</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Sterne in <br>Google-Suchergebnissen</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Detailierte <br>Unternehmensbeschreibung</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Google-optimiertes Profil</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                   <tr>
                     <td>Kommentierung erhaltener Bewertungen</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
+                    <td>
+                      <div class="check-item"><svg class="svg-icon"><use xlink:href="img/sprite.svg#check"></use></svg></div>
+                    </td>
                   </tr>
                 </tbody>
               </table>
