--- a/app/profile.html
+++ b/app/profile.html
@@ -220,7 +220,7 @@
             <div class="profile-info">
               <div class="profile-info__head">
                 <h3>Infos:</h3>
-                <a href="#" class="profile-info__links">
+                <a href="#" class="profile-info__links links-favorite">
                   <svg class="svg-icon">
                     <use xlink:href="img/sprite.svg#heart"></use>
                   </svg>
