--- a/app/publication.html
+++ b/app/publication.html
@@ -216,7 +216,7 @@
               </ul>
               <div class="price">99,99 Euro <span>/ Stunde</span></div>
               <div class="profile-info__head">
-                <a href="#" class="profile-info__links">
+                <a href="#" class="profile-info__links links-favorite">
                   <svg class="svg-icon">
                     <use xlink:href="img/sprite.svg#heart"></use>
                   </svg>
