--- a/app/search.html
+++ b/app/search.html
@@ -267,7 +267,7 @@
                         </div>
                         <div class="card-product__footer">
                           <div class="profile-info__head">
-                            <a href="#" class="profile-info__links">
+                            <a href="#" class="profile-info__links links-favorite">
                               <svg class="svg-icon">
                                 <use xlink:href="img/sprite.svg#heart"></use>
                               </svg>
@@ -294,7 +294,7 @@
                       <div class="card-product__body">
                         <div class="card-product__footer">
                           <div class="profile-info__head">
-                            <a href="#" class="profile-info__links">
+                            <a href="#" class="profile-info__links links-favorite">
                               <svg class="svg-icon">
                                 <use xlink:href="img/sprite.svg#heart"></use>
                               </svg>
