--- a/app/favorites.html
+++ b/app/favorites.html
@@ -209,7 +209,7 @@
                     </div>
                     <div class="card-product__footer">
                       <div class="profile-info__head">
-                        <a href="#" class="profile-info__links">
+                        <a href="#" class="profile-info__links links-favorite">
                           <svg class="svg-icon">
                             <use xlink:href="img/sprite.svg#heart"></use>
                           </svg>
