--- a/app/publication.html
+++ b/app/publication.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
@@ -46,25 +46,140 @@
 <div class="mobile-menu">
   <div class="btn-close"></div>
   <ul class="menu">
-    <li>
-      <a href="#" class="btn-catalog">
+    <li class="dropdown">
+      <a class="btn-catalog" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+         aria-controls="collapseExample">
         <svg class="svg-icon">
           <use xlink:href="img/sprite.svg#burger"></use>
         </svg>
         <span class="btn-catalog__text">Katalog</span>
       </a>
+      <div class="collapse" id="collapseExample">
+        <ul class="submenu">
+          <li><a href="#">Möbelaufbau
+          </a></li>
+          <li><a href="#">Modernisierung, Sanierung
+          </a></li>
+          <li><a href="#">Rollläden, Markisen
+          </a></li>
+          <li><a href="#">Schlosser, Metallbau
+          </a></li>
+          <li><a href="#">Maurer
+          </a></li>
+          <li><a href="#">Stuckateur
+          </a></li>
+          <li><a href="#">Tapezierer
+          </a></li>
+          <li><a href="#">Tischler, Schreiner
+          </a></li>
+          <li><a href="#">Treppenbau
+          </a></li>
+          <li><a href="#">Trockenbau
+          </a></li>
+          <li><a href="#">Türen
+          </a></li>
+          <li><a href="#">Küchenbau
+          </a></li>
+          <li><a href="#">Verfugen, Fugarbeiten, Klinkerfugen
+          </a></li>
+          <li><a href="#">Wintergartenbau
+          </a></li>
+          <li><a href="#">Zimmerer
+          </a></li>
+          <li><a href="#">Sonstige Handwerksleistung
+          </a></li>
+          <li><a href="#">Motorradreparatur
+          </a></li>
+          <li><a href="#">Schneiderei</a></li>
+        </ul>
+      </div>
     </li>
-    <li><a href="#">Handwerker &<br>
-      Meister</a></li>
-    <li><a href="#">Kunstler &<br>
-      Sammlerstücke</a></li>
-    <li><a href="#">Dienstleister &<br>
-      Freiberufler</a></li>
-    <li><a href="#">Meisterklasse & <br>
-      Kreativbedarf</a></li>
+    <li><a data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false"
+           aria-controls="collapseExample2">Handwerker &<br>
+      Meister</a>
+      <div class="collapse" id="collapseExample2">
+        <ul class="submenu">
+          <li><a href="#">Badsanierung</a></li>
+          <li><a href="#">Bodenleger
+          </a></li>
+          <li><a href="#">Deckenarbeiten
+          </a></li>
+          <li><a href="#">Entrümpelung
+          </a></li>
+          <li><a href="#">Elektriker
+          </a></li>
+          <li><a href="#">Fenstermontage
+          </a></li>
+          <li><a href="#">Fliesenleger
+          </a></li>
+        </ul>
+      </div>
+    </li>
+    <li><a data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false"
+           aria-controls="collapseExample3">Kunstler &<br>
+      Sammlerstücke</a>
+      <div class="collapse" id="collapseExample3">
+        <ul class="submenu">
+          <li><a href="#">Badsanierung</a></li>
+          <li><a href="#">Bodenleger
+          </a></li>
+          <li><a href="#">Deckenarbeiten
+          </a></li>
+          <li><a href="#">Entrümpelung
+          </a></li>
+          <li><a href="#">Elektriker
+          </a></li>
+          <li><a href="#">Fenstermontage
+          </a></li>
+          <li><a href="#">Fliesenleger
+          </a></li>
+        </ul>
+      </div>
+    </li>
+    <li><a data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false"
+           aria-controls="collapseExample4">Dienstleister &<br>
+      Freiberufler</a>
+      <div class="collapse" id="collapseExample4">
+        <ul class="submenu">
+          <li><a href="#">Badsanierung</a></li>
+          <li><a href="#">Bodenleger
+          </a></li>
+          <li><a href="#">Deckenarbeiten
+          </a></li>
+          <li><a href="#">Entrümpelung
+          </a></li>
+          <li><a href="#">Elektriker
+          </a></li>
+          <li><a href="#">Fenstermontage
+          </a></li>
+          <li><a href="#">Fliesenleger
+          </a></li>
+        </ul>
+      </div>
+    </li>
+    <li><a data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false"
+           aria-controls="collapseExample5">Meisterklasse & <br>
+      Kreativbedarf</a>
+      <div class="collapse" id="collapseExample5">
+        <ul class="submenu">
+          <li><a href="#">Badsanierung</a></li>
+          <li><a href="#">Bodenleger
+          </a></li>
+          <li><a href="#">Deckenarbeiten
+          </a></li>
+          <li><a href="#">Entrümpelung
+          </a></li>
+          <li><a href="#">Elektriker
+          </a></li>
+          <li><a href="#">Fenstermontage
+          </a></li>
+          <li><a href="#">Fliesenleger
+          </a></li>
+        </ul>
+      </div>
+    </li>
   </ul>
 </div>
-
 
 <div class="wrapper">
   <div class="content">
@@ -125,12 +240,9 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <h3>Katalog</h3>
                         <div class="dropdown-menu-img"><img src="img/public7.jpeg" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
-                        <h4>Handwerker &
-                          Meister</h4>
                         <ul class="submenu">
                           <li><a href="#">Möbelaufbau
                           </a></li>
@@ -170,8 +282,6 @@
                         </ul>
                       </div>
                       <div class="dropdown-menu-col">
-                        <h4>Kunstler &
-                          Sammlerstücke</h4>
                         <ul class="submenu">
 
                           <li><a href="#">Möbelaufbau
@@ -212,8 +322,6 @@
                         </ul>
                       </div>
                       <div class="dropdown-menu-col">
-                        <h4>Dienstleister & |
-                          Freiberufler</h4>
                         <ul class="submenu">
 
                           <li><a href="#">Möbelaufbau
@@ -254,8 +362,6 @@
                         </ul>
                       </div>
                       <div class="dropdown-menu-col">
-                        <h4>Meisterklasse &
-                          Kreativbedarf</h4>
                         <ul class="submenu">
                           <li><a href="#">Möbelaufbau
                           </a></li>
@@ -565,6 +671,7 @@
 
 
     </header>
+
     <section class="publication-page">
       <div class="container">
         <div class="row">
@@ -708,8 +815,43 @@
 
           </div>
         </div>
+
       </div>
     </section>
+
+    <section class="publication-information">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <div class="publication-information-box">
+              <h3>Beschreibung:</h3>
+              <div class="box-text">
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                  labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                  et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
+                  ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+                  dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                  rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="publication-information-box">
+              <h3>Weitere Informationen</h3>
+              <ul class="list-dots">
+                <li>Lorem</li>
+                <li>ipsum</li>
+                <li>dolor</li>
+                <li>sit amet</li>
+                <li>consetetur</li>
+                <li>sadipscing elitr</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <section class="publication">
       <div class="container">
@@ -748,19 +890,23 @@
               </div>
               <div class="slide">
                 <div class="publication-box">
-                  <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img src="img/public5.jpeg"
-                                                                                                      alt=""></a>
+                  <a href="img/public5.jpeg" data-fancybox="image2" class="publication-box__max"><img
+                      src="img/public5.jpeg"
+                      alt=""></a>
                   <div class="row">
                     <div class="col-4">
-                      <div class="publication-box__min" data-img-path="img/public6.jpeg"><img src="img/public6.jpeg" alt="">
+                      <div class="publication-box__min" data-img-path="img/public6.jpeg"><img src="img/public6.jpeg"
+                                                                                              alt="">
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="publication-box__min" data-img-path="img/public7.jpeg"><img src="img/public7.jpeg" alt="">
+                      <div class="publication-box__min" data-img-path="img/public7.jpeg"><img src="img/public7.jpeg"
+                                                                                              alt="">
                       </div>
                     </div>
                     <div class="col-4">
-                      <div class="publication-box__min" data-img-path="img/public8.jpeg"><img src="img/public8.jpeg" alt="">
+                      <div class="publication-box__min" data-img-path="img/public8.jpeg"><img src="img/public8.jpeg"
+                                                                                              alt="">
                       </div>
                     </div>
                   </div>
@@ -768,8 +914,9 @@
               </div>
               <div class="slide">
                 <div class="publication-box">
-                  <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img src="img/public9.jpeg"
-                                                                                                      alt=""></a>
+                  <a href="img/public9.jpeg" data-fancybox="image3" class="publication-box__max"><img
+                      src="img/public9.jpeg"
+                      alt=""></a>
                   <div class="row">
                     <div class="col-4">
                       <div class="publication-box__min" data-img-path="img/public10.jpeg"><img src="img/public10.jpeg"
